--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet"> 
-    <title>Document</title>
+    <title>starting page</title>
 </head>
 
 <body>
@@ -21,8 +21,8 @@
                 <p>Are you ready for a great experience ?</p>
             </div>
             <div class="button">
-                <button class="button1" >Sign Up →<a href="/index1.html"></a></button>
-                <button class="button2"> ← Sign In </button>
+                <button class="button1" >Sign Up →</button>
+                <button class="button2"> ← Sign In <a href="/index1.html"></a> </button>
                 
             </div>
 
