--- a/indexlogin.html
+++ b/indexlogin.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="stylelogin.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&family=Roboto:wght@300;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>login form</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             </form>
 
 
-            <button class="bottom-btn">LOGIN</button>
+            <button class="bottombutton">LOGIN</button>
 
                 <div class="pa">
                     <p>Forgot password ? <a href="www.facebook.com">Click Here</a></p>
